<resources>
    <string name="app_name">Android Hunt</string>

    <!-- [A] -->
    <string name="hello_world">Hello World!</string>
    <string name="first_name">Moises</string>
    <string name="last_name">Granados</string>

    <string name="profile_bio_text">CS major, coffee lover, learning Android dev!</string>

    <string name="profile_hobby_first_text">Gaming</string>
    <string name="profile_hobby_second_text">Coding</string>
    <string name="profile_hobby_third_text">YouTube + Twitch</string>
</resources>