<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/bioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_bio_text"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/hobby1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_hobby_first_text"
        app:layout_constraintTop_toBottomOf="@id/bioText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/hobby2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_hobby_second_text"
        app:layout_constraintTop_toBottomOf="@id/hobby1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/hobby3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_hobby_third_text"
        app:layout_constraintTop_toBottomOf="@id/hobby2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
